# gram_savitzky_golay

./: .clang-format  .clang-format-common.sh  .gitignore  CMakeLists.txt  README.md  _config.yml
.github/workflows/: build.yml  gram_savitzky_golay.recipe  package.yaml
cmake/: gram_savitzky_golayConfig.cmake
debian/: changelog  control  copyright  libgram-savitzky-golay-dev.install  libgram-savitzky-golay-doc.doc-base  libgram-savitzky-golay-doc.lintian-overrides  libgram-savitzky-golay-sva-dev.install  libgram-savitzky-golay1.install  source.lintian-overrides
doxygen/HEAD/: a00002.html  a00002.js  a00005.html  a00005.js  a00008.html  a00008.js  a00021.html  a00021.js  a00566.html  a00569.html  a00569.js  a00570.html  a00573.html  a00573.js  a00574.html  a00577.html  a00577.js  a00578.html  a00581.html  a00581.js  a00582.html  a00585.html  a00585.js  annotated.html  annotated_dup.js  api_8h.html  api_8h.js  api_8h__dep__incl.dot  api_8h__dep__incl.md5  api_8h_source.html  classes.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_6fc444482f84d1b8be24eb9f76da5981.html  dir_6fc444482f84d1b8be24eb9f76da5981.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  (+61 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+3 more)
include/gram_savitzky_golay/: api.h  gram_savitzky_golay.h  spatial_filters.h  sva_filters.h
include/gram_savitzky_golay/filters/: eigen_vector.h  motionvecd.h  ptransformd.h  rotation.h  transform.h  velocity.h
matlab/gram_savitzky_golay/: GenFact.m  GramPoly.m  Weight.m  generate_weights.m  savitzky_golay.m
src/: CMakeLists.txt  gram_savitzky_golay.cpp  spatial_filters.cpp
src/filters/: rotation.cpp
src/test/: CMakeLists.txt  test_gram_savitzky_golay.cpp
test/: CMakeLists.txt  test_gram_savitzky_golay.cpp  test_spatial_filters.cpp
tests/: CMakeLists.txt  test_gram_savitzky_golay.cpp  test_spatial_filters.cpp  test_sva_filters.cpp
